# Kyzlo-v1.1

./: .getattributes  .gitignore  LICENSE  env_example.txt  ersClarkDesktopStock Bot 4  export_phantom_key.py  fix_strat.md  log_to_csv.py  make_wallet.py  pyproject.toml  readme.md  readme_new.md  requirements.txt  run_dry_test.py  run_engine.py  setup_otq_structure.ps1  test_jupiter_v1_lite.py  test_phase3_strategy_isolation.py  test_phase4_coexistence.py  test_phase5_deployment_readiness.py
config/: jupiter.toml
infrastructure/config/: app_config.py
research/: __init__.py  hybrid_market_data_demo.py  sandbox.py
scripts/: smoke_jupiter_trend_pullback.py  test_binance_adapter.py  test_router.py
src/adapters/broker/: alpaca_broker.py
src/adapters/market_data/: __init__.py  alpaca_stream.py  alpha_vantage_adapter.py  coingecko_adapter.py  mock_feed.py  polygon_adapter.py
src/adapters/telemetry/: prometheus.py
src/application/: __init__.py  event_bus.py
src/application/backtest/: fill_simulator.py
src/application/services/: hybrid_market_data.py  order_state_machine.py
src/domain/: __init__.py  config_types.py
src/domain/events/: __init__.py  base.py  execution.py  market.py  order.py  regime.py  risk.py  signal.py
src/domain/fill_models/: __init__.py  slippage.py
src/domain/models/: __init__.py  clock.py  execution_report.py  logical_account.py  market_state.py  order.py  perp_metrics.py  portfolio.py  position.py  primitives.py  regime.py  symbol.py
src/domain/risk/: __init__.py  intraday_limits.py  kill_switch.py  pre_trade.py  wallet_allocation.py
src/domain/strategies/: __init__.py  base.py  ensemble.py  mean_reversion_model.py  microstructure_model.py  trend_model.py
src/oms/: __init__.py  fill_processor.py  order_manager.py  stale_fill_handler.py
src/otq/: __init__.py  base.py  main.py
src/otq/adapters/: __init__.py
src/otq/application/: engine_factory.py
src/otq/config/: solana_tokens.py
src/otq/domain/: __init__.py
src/otq/engines/: __init__.py  jupiter_dex_engine_v1_lite.py
src/otq/ports/: __init__.py  perps_broker.py
src/otq/risk/: __init__.py  (+1 more)
src/ports/: __init__.py  broker.py  market_data.py  telemetry.py
tests/: conftest.py  test_binance_us_adapter_paper_close.py  test_coingecko_price_feed_pro_url.py  test_coingecko_price_feed_sanitize.py  test_hybrid_market_data.py  test_jupiter_adapter_small_amount.py  test_jupiter_exit_balance_clamp.py  test_jupiter_insufficient_funds_soft_fail.py  test_jupiter_price_source_coingecko.py  test_jupiter_trend_pullback_scalper.py  test_perps_mr_adapter.py  test_solana_tokens.py
tests/contracts/: test_jupiter_hex_smoke.py
tests/property/: test_order_fsm.py  test_portfolio_invariants.py
tests/smoke/: test_kill_switch_flow.py
(+9 files in other folders)
