[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupiter-dex-engine-v1-lite"
version = "1.0.0"
description = "Jupiter DEX Engine v1-lite - Solana DEX-only trading bot with mean reversion strategies"
authors = [
    { name = "Clark", email = "you@example.com" }
]
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    # CLI & Utils
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    
    # Data Science
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Solana & Jupiter
    "solana>=0.30.0",
    "solders>=0.18.0",
    "base58>=2.1.0",
    
    # HTTP
    "requests>=2.31.0",
    "httpx>=0.25.0",
    
    # Database
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
jupiter-engine = "otq.engines.jupiter_dex_engine_v1_lite:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
